# SDL_image

./: CMakeLists.txt  IMG.c  Makefile.dc  SDL_image.h  showdcimage.c
build-scripts/: dreamcast.sh  dreamcastsdl2.sh  dreamcastsdl3.sh
examples/: showanim.c  showimage.c
romdisk/: Troy2024.pvr
test/: CMakeLists.txt
